<resources>
    <string name="app_name">Yajhaz</string>

    <string name="genericErrorMessage">Something wrong happened please try again!</string>
    <string name="log_in">LOG IN</string>
    <string name="email">Email.</string>
    <string name="writeYourEmail">Write your email</string>
    <string name="write8CharacterAtLeast">Write 8 character at least</string>
    <string name="forgetThePassword">Forget the password?</string>
    <string name="logIn">Log in</string>
    <string name="password">Password</string>
    <string name="dontHaveAnAccount">Don’t have an account?</string>
    <string name="signup">Sign up</string>
    <string name="pleaseEnterYourEmail">Please enter your email</string>
    <string name="pleaseEnterAValidEmail">Please enter a valid email</string>
    <string name="pleaseEnterYourPassword">Please enter your password</string>

    <string name="warning">Warning !</string>
    <string name="ok">OK</string>

    <string name="internetConnection">Please check your internet connection</string>
    <string name="name">Name.</string>
    <string name="write14Character">Write 14 character</string>
    <string name="phoneNumber">Phone Number.</string>
    <string name="write11Numbers">Write 11 numbers</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="writeYourPasswordAgain">Write your password again</string>
    <string name="sign_up">SIGN UP</string>
    <string name="haveAnAccount">have an account?</string>
    <string name="enterYourName">Please enter your name</string>
    <string name="nameLessThanFourteenCharacter">Name Less Than Fourteen Character</string>
    <string name="pleaseEnterYourPhone">Please enter your phone number</string>
    <string name="PhoneNumberLessThanElevenNumber">Phone Number Less Than Eleven Number</string>
    <string name="passwordLessThanEightCharacter">Password Less Than Eight Character</string>
    <string name="pleaseEnterConfirmPassword">Please enter confirm password</string>
    <string name="confirmPasswordLessThanEightCharacter">Confirm Password Less Than Eight Character</string>
    <string name="passwordNotMatched">The password and confirmation password do not match</string>
    <string name="theRegisterAccountHasBeenSuccess">The account has been registered successfully. Go to log in</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="categories">Categories.</string>
    <string name="popularNow">Popular now.</string>
    <string name="trendingNow">Trending now.</string>


</resources>