<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/maria_orlova">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/yajhazLogo"
                android:layout_width="@dimen/_127sdp"
                android:layout_height="@dimen/_66sdp"
                android:layout_marginBottom="@dimen/_31sdp"
                android:scaleType="center"
                app:layout_constraintBottom_toTopOf="@+id/signupView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/yajhaz_logo" />


            <View
                android:id="@+id/signupView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/vector_border_login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent=".81"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/signupRC"
                style="@style/YajhazSmallCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/signupView"
                app:strokeWidth="0dp">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/signupTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_33sdp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:fontFamily="@font/tt_commons_bold"
                    android:text="@string/sign_up"
                    android:textColor="@color/dimGray"
                    android:textSize="@dimen/_16sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/nameTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_33sdp"
                android:layout_marginTop="@dimen/_21sdp"
                android:fontFamily="@font/tt_commons_medium"
                android:text="@string/name"
                android:textColor="@color/dimGray"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signupRC" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTil"
                style="?attr/textInputOutlinedDenseStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:shadowColor="@color/white"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEt"
                    style="@style/textFieldStyle"
                    android:hint="@string/write14Character"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/emailTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_33sdp"
                android:layout_marginTop="@dimen/_11sdp"
                android:fontFamily="@font/tt_commons_medium"
                android:text="@string/email"
                android:textColor="@color/dimGray"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTil" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                style="?attr/textInputOutlinedDenseStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:shadowColor="@color/white"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailTv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailTilEt"
                    style="@style/textFieldStyle"
                    android:hint="@string/writeYourEmail"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/phoneNumberTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_33sdp"
                android:layout_marginTop="@dimen/_11sdp"
                android:fontFamily="@font/tt_commons_medium"
                android:text="@string/phoneNumber"
                android:textColor="@color/dimGray"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailTil" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberTil"
                style="?attr/textInputOutlinedDenseStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:shadowColor="@color/white"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberTv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberEt"
                    style="@style/textFieldStyle"
                    android:hint="@string/write11Numbers"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/passwordTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_33sdp"
                android:layout_marginTop="@dimen/_11sdp"
                android:fontFamily="@font/tt_commons_medium"
                android:text="@string/password"
                android:textColor="@color/dimGray"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberTil" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                style="?attr/textInputOutlinedDenseStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:shadowColor="@color/white"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordTv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEt"
                    style="@style/textFieldStyle"
                    android:hint="@string/write8CharacterAtLeast"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/confirmPasswordTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_33sdp"
                android:layout_marginTop="@dimen/_11sdp"
                android:fontFamily="@font/tt_commons_medium"
                android:text="@string/confirmPassword"
                android:textColor="@color/dimGray"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordTil" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPasswordTil"
                style="?attr/textInputOutlinedDenseStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:shadowColor="@color/white"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPasswordEt"
                    style="@style/textFieldStyle"
                    android:hint="@string/writeYourPasswordAgain"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/signupBtn"
                style="@style/Widget.MaterialComponents.Button.Yajhaz"
                android:layout_marginHorizontal="@dimen/_53sdp"
                android:layout_marginTop="@dimen/_26sdp"
                android:text="@string/signup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTil" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_35sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/signupBtn"
                app:layout_constraintStart_toStartOf="@+id/signupBtn"
                app:layout_constraintTop_toBottomOf="@+id/signupBtn">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/haveAnAccountTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tt_commons_regular"
                    android:text="@string/haveAnAccount"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/dimGray"
                    android:textSize="@dimen/_10sdp" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/loginTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:fontFamily="@font/tt_commons_bold"
                    android:text="@string/logIn"
                    android:textColor="@color/camel"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>