<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.mycash.yajhaz.core.utils.custom_views.yajhaz_bar.YajhazBarView
            android:id="@+id/yajhazBarView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_38sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.mycash.yajhaz.core.utils.custom_views.profile_view.ProfileView
            android:id="@+id/profileUserView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yajhazBarView" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileUserView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/categoriesTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_29sdp"
                    android:fontFamily="@font/tt_commons_medium"
                    android:text="@string/categories"
                    android:textSize="@dimen/_15sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categoriesRV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/_15sdp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/categoriesTv"
                    tools:ignore="RtlSymmetry"
                    tools:listitem="@layout/item_categories" />


                <androidx.constraintlayout.widget.Group
                    android:id="@+id/categoriesGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    app:constraint_referenced_ids="categoriesTv,categoriesRV" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/popularNowTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_29sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/tt_commons_medium"
                    android:text="@string/popularNow"
                    android:textSize="@dimen/_15sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/categoriesRV" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popularNowRV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/_15sdp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/popularNowTv"
                    tools:ignore="RtlSymmetry"
                    tools:listitem="@layout/item_popular_now" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/popularNowGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    app:constraint_referenced_ids="popularNowTv,popularNowRV" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/trendingNowTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_29sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/tt_commons_medium"
                    android:text="@string/trendingNow"
                    android:textSize="@dimen/_15sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/popularNowRV" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/trendingNowRV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_20sdp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/trendingNowTv"
                    tools:ignore="RtlSymmetry"
                    tools:listitem="@layout/item_trending_now" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/trendingNowGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    app:constraint_referenced_ids="trendingNowTv,trendingNowRV" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>